add msg endpoint
