# backend/build/swagger.json
@@ -177,6 +177,37 @@
 				"parameters": []
 			}
 		},
+		"/msg/{msgId}": {
+			"get": {
+				"operationId": "GetMsgs",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Msg"
+								}
+							}
+						}
+					}
+				},
+				"description": "Retrieves all messages of a thread.",
+				"security": [],
+				"parameters": [
+					{
+						"description": "id of any msg.",
+						"in": "path",
+						"name": "msgId",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/msgs/{threadId}": {
 			"get": {
 				"operationId": "GetMsgs",
